# torchcv_tmpl

./: .gitignore  Makefile  README.md  pyproject.toml
demo/models/mnist/: .gitignore  dataset.py  main.py  model.py  trainer.py  transform.py
requirements/: requirements-dev.txt  requirements-doc.txt  requirements.txt
src/torchcv_tmpl/: __init__.py
src/torchcv_tmpl/data/: __init__.py  base_dataloader.py  base_dataset.py
src/torchcv_tmpl/trainer/: __init__.py  trainer.py
src/torchcv_tmpl/utils/: __init__.py
src/torchcv_tmpl/utils/hardware/: __init__.py
src/torchcv_tmpl/utils/log/: log.py
src/torchcv_tmpl/utils/path/: __init__.py  naming.py
src/torchcv_tmpl/utils/plotter/: __init__.py  plotter.py
src/torchcv_tmpl/utils/typing/: __init__.py  typing.py
