[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=75.1.0",
    "wheel>=0.44.0",
]

[project]
name = "torchcv_tmpl"
authors = [
    { name = "nguyenpanda", email = "hatuongnguyen0107@gmail.com" },
    { name = "Evelyn", email = "phuongdoan0807@gmail.com" },
]
maintainers = [
    { name = "nguyenpanda", email = "hatuongnguyen0107@gmail.com" },
]
description = "A PyTorch-based Computer Vision template trainer designed for lazy users seeking an efficient solution without the need to reimplement the training pipeline."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<=3.13"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://github.com/nguyenpanda/torchcv_tmpl.git"
Repository = "https://github.com/nguyenpanda/torchcv_tmpl.git"

[tool.setuptools.dynamic]
version = { attr = "torchcv_tmpl.__version__" }
dependencies = { file = ["requirements/requirements.txt"] }
optional-dependencies.all = { file = [
    "requirements/requirements",
    "requirements/requirements-dev.txt",
    "requirements/requirements-doc.txt",
    "requirements/requirements-test.txt",
] }

[tool.setuptools.package-data]
"*" = [
    "VERSION",
    "*.pyi",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["torchcv_tmpl*"]

#[project.scripts]
#torch_tmpl = "torch_tmpl.cli:main"

#[tool.pytest.ini_options]
#mccabe-complexity = 10
#
#[tool.pytest]
#norecursedirs = "tests/helpers"
#
#[tool.pylint]
#max-locals = 15
#max-returns = 6
#max-branches = 12
#max-statements = 50
#max-parents = 7
#max-attributes = 7
#min-public-methods = 2
#max-public-methods = 20
#max-module-lines = 1000
#max-line-length = 120
#disable = [
#    "W0511", # fixme
#    "W0311", # bad-indentation
#    "C0330", # bad-continuation
#    "R0903", # too-few-public-methods
#]

#[tool.coverage.run]
#branch = true
#source = ["src"]
#omit = ["*/examples/*", "*setup.py", "*/build/*"]
